# frozen_string_literal: true

require 'singleton'

module Bazooka
  class Standardizer # :nodoc:
    include Singleton
  end
end
